; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_multi.c_curl_multi_assign.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_multi.c_curl_multi_assign.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_multi = type { i32, i64 }
%struct.Curl_sh_entry = type { i8* }

@CURLM_RECURSIVE_API_CALL = common dso_local global i32 0, align 4
@CURLM_BAD_SOCKET = common dso_local global i32 0, align 4
@CURLM_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @curl_multi_assign(%struct.Curl_multi* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.Curl_multi*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.Curl_sh_entry*, align 8
  store %struct.Curl_multi* %0, %struct.Curl_multi** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store %struct.Curl_sh_entry* null, %struct.Curl_sh_entry** %8, align 8
  %9 = load %struct.Curl_multi*, %struct.Curl_multi** %5, align 8
  %10 = getelementptr inbounds %struct.Curl_multi, %struct.Curl_multi* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i32, i32* @CURLM_RECURSIVE_API_CALL, align 4
  store i32 %14, i32* %4, align 4
  br label %29

15:                                               ; preds = %3
  %16 = load %struct.Curl_multi*, %struct.Curl_multi** %5, align 8
  %17 = getelementptr inbounds %struct.Curl_multi, %struct.Curl_multi* %16, i32 0, i32 0
  %18 = load i32, i32* %6, align 4
  %19 = call %struct.Curl_sh_entry* @sh_getentry(i32* %17, i32 %18)
  store %struct.Curl_sh_entry* %19, %struct.Curl_sh_entry** %8, align 8
  %20 = load %struct.Curl_sh_entry*, %struct.Curl_sh_entry** %8, align 8
  %21 = icmp ne %struct.Curl_sh_entry* %20, null
  br i1 %21, label %24, label %22

22:                                               ; preds = %15
  %23 = load i32, i32* @CURLM_BAD_SOCKET, align 4
  store i32 %23, i32* %4, align 4
  br label %29

24:                                               ; preds = %15
  %25 = load i8*, i8** %7, align 8
  %26 = load %struct.Curl_sh_entry*, %struct.Curl_sh_entry** %8, align 8
  %27 = getelementptr inbounds %struct.Curl_sh_entry, %struct.Curl_sh_entry* %26, i32 0, i32 0
  store i8* %25, i8** %27, align 8
  %28 = load i32, i32* @CURLM_OK, align 4
  store i32 %28, i32* %4, align 4
  br label %29

29:                                               ; preds = %24, %22, %13
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local %struct.Curl_sh_entry* @sh_getentry(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
